--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -60,7 +60,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Average velocity: 3.5 km/h"
+        android:text="Average velocity: 0 km/h"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/time"
         app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -73,7 +73,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Velosity: 3.5 km/h"
+        android:text="Velosity: 0 km/h"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/averageVelocity"
         app:layout_constraintTop_toBottomOf="@+id/averageVelocity" />
@@ -86,7 +86,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Distance: 10 km"
+        android:text="Distance: 0 m"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/velosity"
