--- a/app/src/main/res/layout/save_dialog.xml
+++ b/app/src/main/res/layout/save_dialog.xml
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
         <TextView
-            android:id="@+id/tvVelocity"
+            android:id="@+id/tvAverageVelocity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -58,7 +58,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvVelocity" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAverageVelocity" />
 
         <LinearLayout
             android:layout_width="0dp"
