--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,6 +22,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:clickable="true"
+        android:contentDescription="@string/position_description"
+        android:focusable="true"
         android:src="@drawable/ic_my_location"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:clickable="true"
+        android:contentDescription="@string/start_stop_description"
+        android:focusable="true"
         android:src="@drawable/ic_play"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/myPosition"
@@ -47,7 +51,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Time: 00:00:00"
+        android:text="@string/time_example"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +64,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Average velocity: 0 km/h"
+        android:text="@string/average_velocity_example"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/time"
         app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -73,7 +77,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Velosity: 0 km/h"
+        android:text="@string/velocity_example"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/averageVelocity"
         app:layout_constraintTop_toBottomOf="@+id/averageVelocity" />
@@ -86,7 +90,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Distance: 0 m"
+        android:text="@string/distance_example"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/velosity"
