--- a/app/src/main/res/layout/view_track.xml
+++ b/app/src/main/res/layout/view_track.xml
@@ -24,7 +24,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Date: 05/05/2023 14:00"
+        android:text="@string/date_example"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/map" />
@@ -37,7 +37,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Time: 00:00:00"
+        android:text="@string/time_example"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/data"
         app:layout_constraintTop_toBottomOf="@+id/data" />
@@ -50,7 +50,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Average velocity: 0 km/h"
+        android:text="@string/average_velocity_example"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/time"
         app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -63,7 +63,7 @@
         android:background="#99FFFFFF"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="Distance: 0 m"
+        android:text="@string/distance_example"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/averageVelocity"
